2003-02-01  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin and Ken.

	- fixed 3162581 - 56 debug: Assertion failure displaying pop-up menu while downloading
	
        * WebView.subproj/WebMainResourceClient.m:
        (-[WebMainResourceClient handle:didReceiveResponse:]): No need to assert that the controller is
	not deferred if this is a handle being used for a download.
        (-[WebMainResourceClient handle:didReceiveData:]): Likewise.
        (-[WebMainResourceClient handleDidFinishLoading:]): Likewise.
        (-[WebMainResourceClient handle:didFailLoadingWithError:]): Likewise.

2003-01-31  Trey Matteson  <trey@apple.com>

	New plumbing for autofill/autocomplete.  WebBrowser receives controlText delegate
	messages from our form widgets.  Should result in no behavior change.

	New private API is exposed for the app to set a WebFormDelegate.

        Reviewed by Richard

        * WebCoreSupport.subproj/WebBridge.m:  Pass msgs from WC on to the controller's FormDelegate.
        (formDelegate):  Little utility function.
        (-[WebBridge controlTextDidBeginEditing:]):
        (-[WebBridge controlTextDidEndEditing:]):
        (-[WebBridge controlTextDidChange:]):
        (-[WebBridge control:textShouldBeginEditing:]):
        (-[WebBridge control:textShouldEndEditing:]):
        (-[WebBridge control:didFailToFormatString:errorDescription:]):
        (-[WebBridge control:didFailToValidatePartialString:errorDescription:]):
        (-[WebBridge control:isValidObject:]):
        (-[WebBridge control:textView:doCommandBySelector:]):
        * WebKit.exp:  New class exported.
        * WebKit.pbproj/project.pbxproj:  New WebFormDelegate files.
        * WebView.subproj/WebControllerPrivate.h:  API to set/get FormDelegate.
        * WebView.subproj/WebControllerPrivate.m:
        (-[WebController _setFormDelegate:]):  simple setter
        (-[WebController _formDelegate]):  simple getter
        * WebView.subproj/WebFormDelegate.h: Added.